# LAB4_MAI-OOP-LABS-cpp-2025

./: README.md  docker-compose.yml
lab4_var15/: CMakeLists.txt
lab4_var15/include/: array.hpp  concepts.hpp  figure.hpp  hexagon.hpp  octagon.hpp  point.hpp  polygon_utils.hpp  triangle.hpp
lab4_var15/src/: array.cpp  hexagon.cpp  octagon.cpp  polygon_utils.cpp  triangle.cpp
lab4_var15/tests/: test_lab04.cpp
